--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DJ-Bright Lights</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -209,6 +210,13 @@
 							</ul>
 						</div>
 					</div>
+
+				</div>
+			</div>
+		</section>
+		<section class="gallery">
+			<div class="wrapper">
+				<div class="gallery__conteiner">
 
 				</div>
 			</div>
