--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
 				</div>
 			</div>
 		</section>
+		<!--PopULove END-->
+		<!--Tracks START-->
 		<section class="tracks">
 			<div class="wrapper">
 				<div class="tracks__items">
@@ -217,10 +219,13 @@
 		<section class="gallery">
 			<div class="wrapper">
 				<div class="gallery__conteiner">
-
+					<div class="gallery__linesblock">
+						<img src="./img/svg/gallery__img1.svg" alt="">
+					</div>
 				</div>
 			</div>
 		</section>
+		<!--Tracks End-->
 	</main>
 
 </body>
